[metadata]
name = e5
description = Configurable data entry program for archaeology
version = 1.3.3
author = Shannon P. McPherron
author_email = mcpherron@eva.mpg.de
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/surf3s/E5
project_urls =
    Bug Tracker = https://github.com/surf3s/E5/issues
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    e5py
    e5py.lib
install_requires =
    kivy>=2
    tinydb>=4
    plyer>=2
    pyenchant>=3.2.2
    opencv-python>=4.6
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
e5py =
    py.typed
    *.kv

[flake8]
max-line-length = 160